Language auto detect

--- a/src/pug/components/example-navbar.pug
+++ b/src/pug/components/example-navbar.pug
@@ -48,7 +48,7 @@ nav#cross-site-navbar
         a(href="https://www.youtube.com/user/opensusetv") YouTube
 
   .actions
-    #language-dropdown.dropdown
+    #language-dropdown.dropdown.auto-detect
       a.dropdown-toggle(href="#" data-toggle="dropdown") en
       .dropdown-menu.dropdown-menu-right
     .custom-control.custom-switch.dark-mode-switch
