--- a/src/pug/components/example-navbar.pug
+++ b/src/pug/components/example-navbar.pug
@@ -19,10 +19,10 @@ nav#cross-site-navbar
         .dropdown-header.l10n(data-msg-id="development") Development
 
         a.l10n(href="https://build.opensuse.org/" data-msg-id="build-service") Build Service
-
         a(href="https://bugzilla.opensuse.org/") Bugzilla
         a(href="https://github.com/openSUSE/") GitHub
         a(href="https://openqa.opensuse.org/") openQA
+        a(href="https://l10n.opensuse.org/") Weblate
 
         .dropdown-header.l10n(data-msg-id="information") Information
 
