--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -109,7 +109,7 @@
     padding-right: $navbar-padding-x;
     align-self: stretch;
 
-    &:hover {
+    &:hover, &:focus {
       color: $white;
     }
   }
