--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -17,10 +17,9 @@
   }
 }
 
-#site-footer {
+.site-footer {
   @extend .clearfix;
 
-  margin-top: 30px;
   padding: 30px 0;
   color: $gray-600;
   background: $gray-100;
