--- a/src/sass/wiki/_catlinks.scss
+++ b/src/sass/wiki/_catlinks.scss
@@ -3,10 +3,10 @@
 }
 
 .mw-normal-catlinks {
-	background: #ffffff;
+	background: transparent;
 	padding: 0.5em 1em;
 	margin: 2em 0;
-	border-left: 3px solid #73ba25;
+	border-left: 3px solid $green;
 	clear: both;
 }
 
