--- a/src/sass/wiki/_code.scss
+++ b/src/sass/wiki/_code.scss
@@ -1,6 +1,7 @@
 pre {
 	padding: $spacer;
-	background-color: $gray-100;
+  background-color: $gray-800;
+  color: $white;
 }
 
 // When you don't want to escape wiki code inside <pre>, you can use
