--- a/src/sass/wiki/_edit-section.scss
+++ b/src/sass/wiki/_edit-section.scss
@@ -5,7 +5,7 @@
 	a {
 		@extend .btn;
 		@extend .btn-sm;
-		@extend .btn-light;
+		@extend .btn-secondary;
 		font-family: $font-family-sans-serif;
 	}
 }
