--- a/src/sass/chameleon.scss
+++ b/src/sass/chameleon.scss
@@ -14,6 +14,7 @@
 @import "buttons";
 @import "button-input-fonts";
 @import "inputs";
+@import "navs";
 @import "selection-color";
 @import "dropdown-overflow-fix";
 @import "carousel";
