--- a/src/sass/wiki/_index.scss
+++ b/src/sass/wiki/_index.scss
@@ -9,10 +9,12 @@ body.mediawiki {
   @import "header";
   @import "image";
   @import "input";
+  @import "link";
   @import "list";
   @import "navs";
   @import "preference";
   @import "print";
+  @import "sidebar";
   @import "table";
   @import "toc";
   @import "recent-changes";
