card in dark theme

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -81,13 +81,13 @@ block content
     a(href="https://getbootstrap.com/") Bootstrap
     | .
 
-  h3#buttons Buttons
-
   include ../sections/buttons.pug
 
-  h3#inputs Inputs
-
   include ../sections/inputs.pug
+
+  include ../sections/alerts.pug
+
+  include ../sections/cards.pug
 
   h2#graphics Graphics
 
