--- a/src/pug/sections/inputs.pug
+++ b/src/pug/sections/inputs.pug
@@ -1,4 +1,4 @@
-h4 Normal inputs
+h3#inputs Inputs
 
 p
   | Text, search, email, password inputs have the same appearance. They are just
@@ -7,8 +7,6 @@ p
 .mb-3
   input.form-control.mb-3(type="text" placeholder="Text input")
   textarea.form-control(placeholder="Textarea")
-
-h4 Cunstom inputs
 
 p Selects, checkboxs, radio buttons and file inputs should use custom control.
 
