--- a/src/sass/_dark-mode.scss
+++ b/src/sass/_dark-mode.scss
@@ -16,6 +16,11 @@ $dark-mode-border-color: $gray-800;
     @include button-variant($dark-mode-secondary, $dark-mode-secondary);
   }
 
+  .card {
+    border-color: $dark-mode-border-color;
+    background-color: $dark-mode-bg-color;
+  }
+
   .form-control,
   .custom-file-label,
   .custom-select,
