--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,46 +1,61 @@
-// https://github.com/twbs/bootstrap/blob/v4-dev/scss/_variables.scss
+// https://github.com/twbs/bootstrap/blob/master/scss/_variables.scss
 
+// Fonts
+// =====
 $font-path: "../fonts" !default;
 
+// Colors
+// ======
+// All colors are from openSUSE Design System https://opensuse.eosdesignsystem.com/colors
+
+// Monochrome
+$black: #000000;
 $white: #ffffff;
+
+// Gray
 $gray-100: #f8f9fa;
 $gray-200: #e9ecef;
 $gray-300: #dee2e6;
 $gray-400: #ced4da;
 $gray-500: #adb5bd;
-$gray-600: #868e96;
+$gray-600: #6c757d;
 $gray-700: #495057;
 $gray-800: #343a40;
 $gray-900: #212529;
-$black: #000000;
 
-$blue: #21a4df;
-$indigo: #6610f2;
-$purple: #6f42c1;
-$pink: #e83e8c;
-$red: #dc4035;
-$orange: #fd7e14;
-$yellow: #ffc107;
+// Primary colors
 $green: #73ba25;
-$teal: #6da741;
-$cyan: #35b9ab;
+$blue: #173f4f;
+$turquoise: #35b9ab;
+
+// Secondary colors
+$cerulean: #21a4df;
+$yellow: #ffc107;
+$red: #dc3545;
+$orange: #fe7f2d;
+
+// These names are not in Bootstrap color lists
+$colors: (
+  turquoise: $turquoise,
+  cerulean: $cerulean,
+);
 
 // Bootstrap colors
-$primary: $cyan;
-$secondary: $gray-300;
+$primary: $turquoise;
+$secondary: $gray-200;
 $success: $green;
-$info: $blue;
+$info: $cerulean;
 $warning : $yellow;
 $danger : $red;
 $light: $gray-100;
 $dark: $gray-900;
 
 // Body background
-$body-bg: #ffffff;
-$body-color: #000000;
+$body-bg: $white;
+$body-color: $black;
 
 // Links
-$link-color: $teal;
+$link-color: $cerulean;
 
 // Options
 
