--- a/src/pug/sections/alerts.pug
+++ b/src/pug/sections/alerts.pug
@@ -2,10 +2,22 @@ h3#alerts Alerts
 
 p You can only use four alert variants: info, success, warning, danger
 
-.alert.alert-info This is an alert.
+.alert.alert-info
+  | This is an alert.
+  |
+  a(href="#") Link.
 
-.alert.alert-success This is an alert.
+.alert.alert-success
+  | This is an alert.
+  |
+  a(href="#") Link.
 
-.alert.alert-warning This is an alert.
+.alert.alert-warning
+  | This is an alert.
+  |
+  a(href="#") Link.
 
-.alert.alert-danger This is an alert.
+.alert.alert-danger
+  | This is an alert.
+  |
+  a(href="#") Link.
