List group dark mode

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -89,6 +89,8 @@ block content
 
   include ../sections/cards.pug
 
+  include ../sections/lists.pug
+
   h2#graphics Graphics
 
   include ../sections/graphics.pug
