--- a/src/sass/wiki/_list.scss
+++ b/src/sass/wiki/_list.scss
@@ -10,6 +10,10 @@
 	.list-group {
 		margin-left: 0;
 		margin-right: 0;
-		margin-bottom: 0;
+    margin-bottom: 0;
+
+    > a {
+      @extend .list-group-item;
+    }
 	}
 }
