Modal dark theme

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -91,6 +91,8 @@ block content
 
   include ../sections/lists.pug
 
+  include ../sections/modals.pug
+
   h2#graphics Graphics
 
   include ../sections/graphics.pug
