--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -102,3 +102,10 @@ $display4-size: $font-size-base * 3.5;
 
 // Table
 $table-border-color: $gray-400;
+
+// Modals
+$modal-content-border-width: 0;
+
+// Close
+$close-text-shadow: none;
+$close-color: inherit;
