--- a/src/sass/_dark-mode.scss
+++ b/src/sass/_dark-mode.scss
@@ -64,6 +64,10 @@ $dark-mode-border-color: $gray-800;
     border-color: $dark-mode-border-color;
   }
 
+  .modal-content {
+    background-color: $dark-mode-bg-color;
+  }
+
   .nav {
     &.nav-tabs {
       border-color: $dark-mode-border-color;
