--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -14,12 +14,12 @@ block content
   p If your application already provides jQuery (MediaWiki, WordPress, etc.):
 
   pre
-    code.html= `<script src="https://static.opensuse.org/chameleon/dist/js/chameleon-no-jquery.js"><script>`
+    code.html= `<script src="https://static.opensuse.org/chameleon/dist/js/chameleon-no-jquery.js"></script>`
 
   p Otherwise:
 
   pre
-    code.html= `<script src="https://static.opensuse.org/chameleon/dist/js/chameleon.js"><script>`
+    code.html= `<script src="https://static.opensuse.org/chameleon/dist/js/chameleon.js"></script>`
 
   h3 Install from NPM
 
