--- a/src/pug/components/theme-doc-navbar.pug
+++ b/src/pug/components/theme-doc-navbar.pug
@@ -1,5 +1,10 @@
-nav#theme-doc-navbar.d-flex.justify-content-center.bg-dark.text-light
-  ul.nav.nav-pills
+extends ../layouts/navbar.pug
+
+block title
+  span Chameleon
+
+block content
+  ul.navbar-nav.mr-auto
 
     li.nav-item
       a.nav-link(href="#how-to-use") How to use
