Correct image path

--- a/src/pug/layouts/navbar.pug
+++ b/src/pug/layouts/navbar.pug
@@ -1,6 +1,6 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-light
   a.navbar-brand(href="#")
-    img.mr-2(src="/dist/images/logo/logo-white.svg")
+    img.mr-2(src="./dist/images/logo/logo-white.svg")
     span.navbar-title
       block title
 
