new dark mode toggler

--- a/src/pug/layouts/navbar.pug
+++ b/src/pug/layouts/navbar.pug
@@ -10,5 +10,8 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
   #navbar-collapse.collapse.navbar-collapse
     block content
 
+  button.navbar-toggler.darkmode-toggler(type="button")
+    span.navbar-toggler-icon.darkmode-toggler-icon
+
   button.navbar-toggler.megamenu-toggler(type="button")
     span.navbar-toggler-icon.megamenu-toggler-icon
