--- a/src/pug/layouts/navbar.pug
+++ b/src/pug/layouts/navbar.pug
@@ -1,4 +1,4 @@
-nav.navbar.navbar-expand-lg.navbar-light.bg-light
+nav.navbar.navbar-expand-lg
   a.navbar-brand(href="#")
     img.mr-2(src="./dist/images/logo/logo-white.svg")
     span.navbar-title
