--- a/src/sass/_dark-mode.scss
+++ b/src/sass/_dark-mode.scss
@@ -1,12 +1,75 @@
+// Variables
 $dark-mode-body-bg-color: $black;
 $dark-mode-text-color: $gray-500;
 $dark-mode-secondary: $gray-800;
 $dark-mode-bg-color: $gray-900;
 $dark-mode-border-color: $gray-800;
 
-.dark-mode {
+// Mixins
+@mixin dark-mode {
   background-color: $dark-mode-body-bg-color;
   color: $dark-mode-text-color;
+
+  .navbar {
+    background: $dark-mode-body-bg-color !important;
+
+    .navbar-brand {
+      color: $navbar-dark-brand-color;
+
+      @include hover-focus {
+        color: $navbar-dark-brand-hover-color;
+      }
+    }
+
+    .navbar-nav {
+      .nav-link {
+        color: $navbar-dark-color;
+
+        @include hover-focus {
+          color: $navbar-dark-hover-color;
+        }
+
+        &.disabled {
+          color: $navbar-dark-disabled-color;
+        }
+      }
+
+      .show > .nav-link,
+      .active > .nav-link,
+      .nav-link.show,
+      .nav-link.active {
+        color: $navbar-dark-active-color;
+      }
+    }
+
+    .navbar-toggler {
+      color: $navbar-dark-color;
+      border-color: $navbar-dark-toggler-border-color;
+    }
+
+    .navbar-toggler-icon {
+      background-image: $navbar-dark-toggler-icon-bg;
+    }
+
+    .darkmode-toggler-icon {
+      background: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='#{$navbar-dark-color}' stroke-linecap='round' stroke-linejoin='round' stroke-miterlimit='10' stroke-width='2' fill='transparent' d='#{$darkmode-icon-path}'/></svg>");
+    }
+
+    .megamenu-toggler-icon {
+      background: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='#{$navbar-dark-color}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' fill='transparent' d='#{$megamenu-icon-path}'/></svg>");
+    }
+
+    .navbar-text {
+      color: $navbar-dark-color;
+      a {
+        color: $navbar-dark-active-color;
+
+        @include hover-focus {
+          color: $navbar-dark-active-color;
+        }
+      }
+    }
+  }
 
   .btn-secondary {
     @include button-variant($dark-mode-secondary, $dark-mode-secondary);
@@ -95,4 +158,32 @@ $dark-mode-border-color: $gray-800;
   .site-footer {
     background: $dark;
   }
+}
+
+// Default auto mode
+body:not(.dark-mode):not(.light-mode) {
+  .darkmode-toggler-icon {
+    position: relative;
+  }
+
+  .darkmode-toggler-icon::after {
+    content: "auto";
+    font-size: 8px;
+    background: $green;
+    color: $white;
+    position: absolute;
+    bottom: -2px;
+    right: -2px;
+    display: block;
+    padding: 2px;
+    border-radius: 6px;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    @include dark-mode();
+  }
+}
+
+.dark-mode {
+  @include dark-mode();
 }
