--- a/src/sass/_dark-mode.scss
+++ b/src/sass/_dark-mode.scss
@@ -160,6 +160,7 @@ $dark-mode-border-color: $gray-800;
     background: $dark;
   }
 
+  body.mediawiki table,
   .table {
     color: inherit;
   }
