--- a/src/pug/layouts/main.pug
+++ b/src/pug/layouts/main.pug
@@ -5,6 +5,8 @@ block variables
 
 html(lang="en")
   head
+    meta(charset="utf-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
     title= title + ' - ' + subtitle
     link(href="./dist/images/app-icons/www-16.png", rel="icon", sizes="16x16" type="image/png")
     link(href="./dist/images/app-icons/www.png", rel="icon", sizes="256x256" type="image/png")
@@ -13,13 +15,11 @@ html(lang="en")
 
   body(data-spy="scroll" data-target="#theme-doc-navbar" data-offset="100" style="position: relative;")
 
-    include ../components/theme-doc-navbar.pug
-
-    include ../components/theme-doc-header.pug
+    include ../components/navbar.pug
 
     .container
       block content
 
-    include ../components/theme-doc-footer.pug
+    include ../components/footer.pug
 
     script(src="./dist/js/chameleon.js")
