use remix icons in navbar

--- a/src/pug/components/navbar.pug
+++ b/src/pug/components/navbar.pug
@@ -5,7 +5,8 @@ nav.navbar.navbar-expand-lg
       Chameleon
 
   button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbar-collapse")
-    span.navbar-toggler-icon
+    svg.icon
+      use(xlink:href="/dist/svg/sprite.svg#menu-2-line")
 
   #navbar-collapse.collapse.navbar-collapse
 
