--- a/src/sass/chameleon.scss
+++ b/src/sass/chameleon.scss
@@ -2,9 +2,8 @@
 @import "variables";
 @import "bootstrap/scss/bootstrap";
 
-// Patched Typicons
-@import "typicons";
 @import "animate";
+@import "icons";
 
 // Global styles
 @import "fontfaces";
