compile svg sprite into js

--- a/src/pug/components/navbar.pug
+++ b/src/pug/components/navbar.pug
@@ -6,7 +6,7 @@ nav.navbar.navbar-expand-lg
 
   button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbar-collapse")
     svg.icon
-      use(xlink:href="/dist/svg/sprite.svg#menu-2-line")
+      use(xlink:href="#menu-2-line")
 
   #navbar-collapse.collapse.navbar-collapse
 
