don't not use serif fonts

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -82,7 +82,7 @@ $font-size-small: 0.8rem;
 
 // Headings
 $headings-margin-bottom: 1rem;
-$headings-font-family: $font-family-serif;
+$headings-font-family: $font-family-sans-serif;
 $headings-font-weight: 400;
 
 $h1-font-size: $font-size-base * 3.5;
