use cookies instead of localstorage

--- a/src/pug/components/navbar.pug
+++ b/src/pug/components/navbar.pug
@@ -1,8 +1,7 @@
 nav.navbar.navbar-expand-lg
   a.navbar-brand(href="/")
     img.mr-2(src="./dist/images/logo/logo-white.svg")
-    span.navbar-title
-      Chameleon
+    span.navbar-title Chameleon
 
   button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbar-collapse")
     svg.icon
