--- a/src/pug/components/navbar.pug
+++ b/src/pug/components/navbar.pug
@@ -12,13 +12,37 @@ nav.navbar.navbar-expand-lg
     ul.navbar-nav.mr-auto
 
       li.nav-item
-        a.nav-link(href="/") Get Started
+        a.nav-link(href="/get-started.html")
+          svg.icon
+            use(xlink:href="#rocket-2-line")
+          | &nbsp;Get Started
 
       li.nav-item
-        a.nav-link(href="/elements.html") Elements
+        a.nav-link(href="/elements.html")
+          svg.icon
+            use(xlink:href="#stack-line")
+          | &nbsp;Elements
 
       li.nav-item
-        a.nav-link(href="/components.html") Components
+        a.nav-link(href="/layouts.html")
+          svg.icon
+            use(xlink:href="#layout-line")
+          | &nbsp;Layouts
 
       li.nav-item
-        a.nav-link(href="/changelog.html") Changelog
+        a.nav-link(href="/components.html")
+          svg.icon
+            use(xlink:href="#dashboard-line")
+          | &nbsp;Components
+
+      li.nav-item
+        a.nav-link(href="/changelog.html")
+          svg.icon
+            use(xlink:href="#clipboard-line")
+          | &nbsp;Changelog
+
+      li.nav-item
+        a.nav-link(href="https://github.com/openSUSE/chameleon")
+          svg.icon
+            use(xlink:href="#github-line")
+          | &nbsp;Source Code
