--- a/src/pug/layouts/main.pug
+++ b/src/pug/layouts/main.pug
@@ -11,13 +11,12 @@ html(lang="en")
     link(href="./dist/images/app-icons/www-16.png", rel="icon", sizes="16x16" type="image/png")
     link(href="./dist/images/app-icons/www.png", rel="icon", sizes="256x256" type="image/png")
     link(href="./dist/css/chameleon.css", rel="stylesheet")
-    link(href="./dist/css/theme-doc.css", rel="stylesheet")
 
-  body(data-spy="scroll" data-target="#theme-doc-navbar" data-offset="100" style="position: relative;")
+  body.d-flex.flex-column(style="min-height:100vh;")
 
     include ../components/navbar.pug
 
-    .container
+    .container.flex-fill.py-5
       block content
 
     include ../components/footer.pug
