--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -1,3 +1,2 @@
 footer#theme-doc-footer.text-center.py-5.bg-dark.text-light
-  .container
-    p &copy; 2017-#{new Date().getFullYear()} Guo Yunhe. GPLv3
+  .container &copy; 2017-#{new Date().getFullYear()} openSUSE Contributors
