--- a/src/pug/layouts/main.pug
+++ b/src/pug/layouts/main.pug
@@ -3,6 +3,7 @@
 
 block variables
 
+doctype html
 html(lang="en")
   head
     meta(charset="utf-8")
@@ -11,6 +12,7 @@ html(lang="en")
     link(href="./dist/images/app-icons/www-16.png", rel="icon", sizes="16x16" type="image/png")
     link(href="./dist/images/app-icons/www.png", rel="icon", sizes="256x256" type="image/png")
     link(href="./dist/css/chameleon.css", rel="stylesheet")
+    link(href="./lib/github.css", rel="stylesheet")
 
   body.d-flex.flex-column(style="min-height:100vh;")
 
@@ -22,3 +24,5 @@ html(lang="en")
     include ../components/footer.pug
 
     script(src="./dist/js/chameleon.js")
+    script(src="./lib/highlight.js")
+    script hljs.initHighlightingOnLoad();
